# ghidra-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  apply_prefix_renames.py  batch-unify-ordinals.bat  bridge_mcp_ghidra.py  functions-extract.ps1  mcp-config.json  pom.xml  pyproject.toml
.github/workflows/: README.md  auto-release.yml  pre-release.yml  release.yml  tests.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: Analysis_AllocateConnectionRecord_CrossVersion.md  Detailed_Investigation_Ordinal_401.md  Investigation_AddAuHandlerToList_Differences.md  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md
examples/: D2PtrsOg.h  D2StructsOg.h
ghidra_scripts/: AnalyzeD2LoopsAndAI.py  AutoTypeD2Functions.py  BatchDocumentFunctions.java  BatchDocumentFunctionsInteractive.java  CreateD2StructureTemplates.py  DebugOrdinalRename.py  DetectAndApplyD2Conventions.java  DetectD2CallingConventions.py  DetectD2ConventionsBatch.java  ExportDLLFunctionMappings.java  ExportDLLFunctionMappingsAuto.java  ExportOrdinalLister.py  ResolveOrdinalImports.java  ResolveOrdinalImportsAll.java  UltimateOrdinalFixer.py  UnifyOrdinalNames_ProjectFolder.java
tests/: endpoints.json  run_tests.py
tools/: README.md
workflows/: README.md  __init__.py  autonomous_loop.py  autonomous_runner.py  bookmark_tracker.py  claude_analyzer.py  continuous_improvement.py  dashboard.py  ghidra_manager.py  quality_tracker.py  re_documentation_tools.py  re_improvement_workflow.py  run_improvement_loop.py  self_improvement.py  session_reporter.py  test_workflow.py
(+29 files in other folders)
