[project]
name = "ghidra-mcp"
version = "2.0.0"
description = "Production-ready Model Context Protocol server for Ghidra reverse engineering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.5.0,<2.0.0",
    "requests>=2.28.0,<3.0.0",
]

[dependency-groups]
test = [
    "aiohttp>=3.8.0",
    "coverage>=7.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.1.0",
    "pytest-json-report>=1.5.0",
    "pytest-mock>=3.10.0",
    "pytest-pdb>=0.2.0",
    "pytest-picked>=0.4.6",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "requests-mock>=1.10.0",
    "responses>=0.22.0",
]
lint = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "isort>=5.10.0",
]
typecheck = [
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typecheck" },
]

[tool.uv]
package = false

